--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "xlsx": "^0.18.5"
   },
   "engines": {
     "node": ">=18.0.0"
